# MicroVIT-With-XML-RPC

./: .gitignore  CLEANUP_REPORT.md  COMPLETE_SYSTEM_START.md  COPY_TO_NANO_AND_RESTART.sh  QUICK_START.md  README.md  SETUP_GUIDE.md  create_models_documentation.py  run_lidar_port_check.sh  setup_ssh_keys.sh  start_system.sh
RobotOps_Streamlit_UI/: LIVE_MQTT_STEPS.md  README.md  alerts.py  app.py  models.py  mqtt_bridge.py  requirements.txt  simulator.py
controller_rpi/: requirements.txt
docs/: LIDAR_INVESTIGATION_REPORT.md  LIDAR_RESOLVE.md  STEP_BY_STEP_START.md  architecture.md  lidar_complete_diagnosis.md  lidar_motor_spinning_no_data.md  lidar_power_fix.md  lidar_troubleshooting.md  sequence_diagrams.md  troubleshooting.md
helper_robot/: requirements.txt
robot1/nano_ros1_master/src/jetbot_nano_bringup/: CMakeLists.txt  package.xml
robot1/nano_ros1_master/src/jetbot_nano_bringup/launch/: nano_bringup.launch  nano_bringup_full.launch
robot1/nano_ros1_master/src/jetbot_nano_bringup/nodes/: autonomous_driver_node.py  camera_publisher_node.py  check_device_protocol.py  jetbot_motor_driver.py  lidar_dummy_node.py  motor_driver_node.py  motor_service_server.py  odom_dummy_node.py  sensor_service_server.py  xmlrpc_server_nano.py  xmlrpc_server_nano_realtime.py
robot1/nano_ros1_master/src/jetbot_nano_bringup/srv/: GetLidarData.srv  GetOdometryData.srv  GetRobotStatus.srv  SetMotorVelocity.srv
robotops-grafana/: README.md  docker-compose.yml
tools/: ENABLE_MICROVIT.md  FIX_OLLAMA_MODEL.md  LAUNCH_COMPLETE_SYSTEM.md  RESTART_AI_SERVICE.txt  RESTART_LIDAR_ON_NANO.txt  RESTART_WITH_5SEC_INTERVAL.txt  RUN_ON_ORIN.txt  check_and_fix_ollama.sh  check_lidar_status.sh  check_nano_nodes.sh  patch_motor_driver_on_nano.py  restart_ai_service.sh  (+1 more)
(+75 files in other folders)
